subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/valid/StringAssign_Valid_5.while
void bar(string baz) {
    baz[0] = 'z';
}

void main() {
    string foo = "hello";
    bar(foo);
    print foo;
}

