subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/invalid/Typing_Invalid_16.while
int f([int] xs) {
    xs[1.0] = 1;
    return xs[0];
}